# ds-u2-actividad-1-listasenlazadassimples-ZapataFrame

./: .gitignore  CMakeLists.txt  Doxyfile  ListaGeneral.cpp  ListaGeneral.h  ListaSensor.h  Nodo.h  README.md  SensorBase.cpp  SensorBase.h  SensorPresion.cpp  SensorPresion.h  SensorTemperatura.cpp  main.cpp
arduino/: sketch_sensores_iot.ino
docs/html/: ArduinoReader_8cpp.html  ArduinoReader_8cpp__incl.map  ArduinoReader_8cpp__incl.md5  ArduinoReader_8cpp_source.html  ArduinoReader_8h_source.html  ListaGeneral_8cpp.html  ListaGeneral_8cpp__incl.map  ListaGeneral_8cpp__incl.md5  ListaGeneral_8cpp_source.html  ListaGeneral_8h.html  ListaGeneral_8h__dep__incl.map  ListaGeneral_8h__dep__incl.md5  ListaGeneral_8h__incl.map  ListaGeneral_8h__incl.md5  ListaGeneral_8h_source.html  ListaSensor_8h.html  ListaSensor_8h__dep__incl.map  ListaSensor_8h__dep__incl.md5  ListaSensor_8h__incl.map  ListaSensor_8h__incl.md5  ListaSensor_8h_source.html  Nodo_8h.html  Nodo_8h.js  Nodo_8h__dep__incl.map  Nodo_8h__dep__incl.md5  Nodo_8h_source.html  SensorBase_8cpp.html  SensorBase_8cpp__incl.map  SensorBase_8cpp__incl.md5  SensorBase_8cpp_source.html  SensorBase_8h.html  SensorBase_8h__dep__incl.map  SensorBase_8h__dep__incl.md5  SensorBase_8h__incl.map  SensorBase_8h__incl.md5  SensorBase_8h_source.html  SensorPresion_8cpp.html  SensorPresion_8cpp__incl.map  SensorPresion_8cpp__incl.md5  SensorPresion_8cpp_source.html  (+83 more)
docs/html/search/: all_0.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  classes_0.js  classes_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_1.js  variables_2.js
include/: ArduinoReader.h  ListaGeneral.h  ListaSensor.h  Nodo.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h
reporte_latex/: main.tex
src/: ArduinoReader.cpp  ListaGeneral.cpp  SensorBase.cpp  SensorPresion.cpp  SensorTemperatura.cpp  main.cpp
